welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:5: error: value asb is not a member of object Math
  return Math.asb(21-n)
              ^